# crowdpulse

./: .flake8  .pylintrc  README.md  requirements.txt  setup.cfg  split_tests.py
app/: __init__.py  main.py
app/ai_engine/: __init__.py  chatbot.py  explainer.py  gemini_caller.py  prompt_builder.py  staff_advisor.py
app/api/: __init__.py  routes_analytics.py  routes_auth.py  routes_crowd.py  routes_navigation.py
app/crowd_engine/: __init__.py  predictor.py  simulator.py  wait_times.py
app/decision_engine/: __init__.py  router.py  scorer.py
app/google_services/: __init__.py  bigquery_client.py  cloud_logging.py  firebase_auth.py  firestore_client.py  maps_client.py
app/middleware/: __init__.py  rate_limiter.py
app/models/: __init__.py  analytics_models.py  chat_models.py  crowd_models.py  navigation_models.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
tests/: conftest.py  test_auth.py  test_coverage_boost.py  test_crowd_engine.py  test_decision_engine.py  test_google_services_mocked.py  test_performance.py  test_security.py
