[metadata]
name = crowdpulse-ai
version = 1.0.0
description = Intelligent crowd navigation platform for large-scale sporting venues
author = CrowdPulse Team
license = MIT

[options]
python_requires = >=3.11

[tool:pytest]
testpaths = tests

[coverage:run]
source = app
omit = */tests/*

[coverage:report]
fail_under = 90
show_missing = true
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
    pass

[flake8]
max-line-length = 100
exclude = venv,.venv,__pycache__
